--- a/Java_02_基础知识/note/01_基础知识.md
+++ b/Java_02_基础知识/note/01_基础知识.md
@@ -1,5 +1,37 @@
 # 基础知识
 
+- [基础知识](#基础知识)
+  * [Java的程序结构](#java的程序结构)
+    + [Java的程序框架](#java的程序框架)
+    + [Java程序运行](#java程序运行)
+  * [Java语言组成](#java语言组成)
+    + [关键字](#关键字)
+    + [标志符](#标志符)
+    + [注释](#注释)
+    + [常量和变量](#常量和变量)
+    + [常量](#常量)
+    + [变量](#变量)
+    + [类型转换](#类型转换)
+    + [运算符](#运算符)
+      - [算数运算符](#算数运算符)
+      - [赋值运算符](#赋值运算符)
+      - [比较运算符](#比较运算符)
+      - [逻辑运算符](#逻辑运算符)
+      - [位运算符](#位运算符)
+      - [三元运算符](#三元运算符)
+    + [程序流程控制](#程序流程控制)
+      - [判断](#判断)
+      - [选择](#选择)
+      - [循环](#循环)
+      - [其他](#其他)
+    + [函数](#函数)
+      - [函数特点](#函数特点)
+      - [函数重载](#函数重载)
+    + [数组](#数组)
+      - [数组称之为引用类型](#数组称之为引用类型)
+      - [数组的常见问题](#数组的常见问题)
+      - [二维数组](#二维数组)
+
 ## Java的程序结构
 
 ### Java的程序框架
@@ -114,6 +146,18 @@ public class xxx {
 
 关于`char`的问题：`char`类型为无符号
 
+关于定义`float`类型的数据：
+
+```java
+//Type mismatch:cannot convert from double to float
+float f = 1.3;
+
+//correct 
+float f = 1.3f;
+```
+
+
+
 ### 类型转换
 
 - 自动类型转换(隐式类型提升:低级到高级)
@@ -125,12 +169,51 @@ public class xxx {
 1. 强制类型转化（显示类型提升：高级到低级）
 2. 类型转换原理
 
+- 注意点：
+
+```java
+public class DataChange1{
+	public static void main(String[] args){
+		byte b = b + 5;
+		System.out.println(b);
+	}
+}
+/*DataChange1.java:3: 错误: 不兼容的类型: 从int转换到byte可能会有损失
+                byte b = b + 5;
+*/
+/*
+b为byte类型，占用一个字节
+5为int类型，占用4个字节
+在进行b+5运算时，byte类型的数据回向int类型数据转换，导致（b+5）的值为int类型
+此时的问题是：int类型的数据向byte类型的数据赋值，导致不兼容类型
+修改方法：byte b = (byte)(b+5);
+*/
+```
+
 ![](../media/08_Java数据类型转换.png)
 
 ```java
 System.out.println('a');  //'a'
 System.out.println('a' + 1);//98
+//类型提升的作用 char -> int
 ```
+
+**ASCII码**：
+
+- 48 `0`
+- 65 `A`
+- 97 `a`
+
+**转义字符**：
+
+- 系统换行:
+  - `Linux`系统使用`\n`换行
+  - `windows`系统使用`\r\n`换行
+- 文件路径在字符串中的表示问题：
+  - 使用`\\`来表示一个斜杠
+  - 使用`/`来表示一个斜杠
+- 单双引号混用
+  - 成对使用
 
 ### 运算符
 
@@ -227,7 +310,7 @@ switch(){
 }
 ```
 
-
+- 选择类型：`byte short int char `
 
 #### 循环
 
@@ -254,10 +337,97 @@ for(初始表达式;循环判断条件;循环后的操作表达式){
 
 ```java
 break;
+	//跳出本层循环
 continue;
+	// 结束本次循环，直接进行下一次循环
 ```
 
 ### 函数
 
+具有特定功能的独立的小程序
+
+```
+修饰符 返回值类型 函数名(参数类型 形式参数1，参数类型 形式参数2){
+    执行语句;
+    return 返回值;
+}
+```
+
+#### 函数特点
+
+- 功能封装
+- 功能复用
+
+#### 函数重载
+
+- 允许同名函数出现
+- 重载特点：
+  - 与返回值无关
+  - 只看形参列表
+- 重载的好处：
+  - 方便阅读，优化了程序设计
+
 ### 数组
+
+同种数据类型的集合
+
+从0开始编号
+
+- 数组的定义：
+
+```java
+元素类型个[] 数组名 = new 元素类型[元素个数或者数组长度];
+```
+
+```java
+int[] array1 = new int[10];
+int[] array2 = new int[]{1,2,3,4,5};
+int array3[] = {1,2,3,4,5};
+int array4[10] = {0};//error
+
+```
+
+#### 数组称之为引用类型
+
+![](../media/11_引用数据类型之数组1.png)
+
+在内存中分配空间：
+
+- 栈 局部变量,当数据使用完成之后，所占用的空间会自动释放
+- 堆 数组和对象 通过new的对象实例都在内存中
+
+每一个实体都有一个内存地址
+
+实体中的变量都有默认的初始值
+
+实体中的数据在不被使用时，会在不确定的时间内被垃圾回收机制回收释放
+
+#### 数组的常见问题
+
+- 数组角标越界
+- 空指针异常
+
+#### 二维数组
+
+```java
+/*
+定义3个一维数组，每一个一维数组中有2个元素
+一维数组名称：arr1[0] arr1[1] arr1[2]
+*/
+int[][] arr1 = new int[3][2];
+/*
+定义三个一维数组，这种写法可以实现进行分别初始化
+每一个一维数组默认初始值为null
+*/
+int[][] arr2 = new int[3][];
+arr2[0] = new int[3];
+arr2[1] = new int[2];
+arr2[2] = new int[4];
+/*
+格式3
+*/
+int[][] arr3 = {{1,2,3},{1,2},{1,}};
+/*获取数组长度*/
+int length = arr3[2].length;
+```
 
