--- a/Java_04_三大特性/note/04_三大特性.md
+++ b/Java_04_三大特性/note/04_三大特性.md
@@ -244,3 +244,245 @@ class Student extends Person{
   - 类似于C语言中的宏定义
   - `public static final PI = 3.14;`
 - 继承打破了封装性
+
+## 抽象类
+
+上述说到，类是多个个体进行抽象所得出来的。当多个类出现相同功能时，但是功能主体却不同。
+
+对于一个父类，如果它的某个方法在父类中实现没有任何意义，必须根据子类的实际需求来进行不同的实现，那么就可以将这个方法声明文`abstrat`方法，此时这个类也就成了`abstract`类。
+
+抽象类的特点：
+
+- 抽象方法一定定义在抽象类中
+- 抽象类和抽象方法一定要被`abstract`关键字修饰
+- 抽象类不可以使用`new`，必须由子类进行复写之后，在`new`
+- 抽象类中的方法如果被使用的前提，必须由子类复写所有的抽象方法之后
+- 如果子类只是覆盖部分抽象方法，那么该子类还是一个抽象类
+
+```java
+abstract class Stuent{
+    abstract void stuy();
+}
+class BaseStudent exteends Student{
+    void study(){
+        sysout("Base Study");
+    }
+}
+class AbstractDemo {
+    public static void main(String[] args){
+        sysout("Hello World!!!");
+        new BaseStudent().study();
+    }
+}
+```
+
+抽象类可以强制子类复写一些方法，抽象类和子类没什么不同：
+
+- 大部分抽象类中多了一些抽象方法(只有方法名称，没有实现)
+- 抽象类的方法名称只能通过子类来进行实现
+- 抽线类可以定义抽象方法，也可以不定义抽象方法
+  - 抽象类不定义抽象方法，表明该类不能创建对象
+- 抽象类不能被实例化
+
+```java
+/*
+员工：name id pay
+经理：name id pay bonus
+*/
+abstract class empoyee{
+    private String name;
+    private String id;
+    private int pay;
+    empoyee(String name,String id, int pay){
+        this.name = name;
+        this.id = id;
+        this.pay = pay;
+    }
+    public abstract void work(); 
+}
+class ProEmployee extends employee{
+
+    ProEmployee(String name, String id, int pay){
+        super(name, id, pay);
+    }
+    
+    public void work(){
+        sout("普通员工在工作..");
+    }
+    
+}
+class Manager extends employee{
+    
+    private int bonus;
+    Manager(String name, String id, int pay, int bonus){
+        super(name, id, pay);
+        this.bonus = bonus;
+    }
+    public void work(){
+        sout("经理在工作..");
+    }
+    
+}
+```
+
+## 模板方法模式
+
+```java
+/*
+获取程序的运行时间
+*/
+abstract class GetTime{
+    public final getTime(){
+        long starts = System.currectTimeMillis();
+        runcode();
+        long ends = System.currectTimeMillis();
+        sysout(ends - staers);
+    }
+    /*强制子类进行复写*/
+    abstract void runcode();
+}
+Class SubTime extends GetTime{
+    public void runcode(){
+        /*运行代码*/
+    }
+}
+```
+
+这种方法称之为：模板方法设计模式
+
+- 在定义功能时，功能的部分时确定的，但是有些部分是不确定的，而确定的部分在调用不确定的部分
+- 可以使用这种方法，将不确定的部分暴露出来，让子类复写该方法
+
+## 接口
+
+理解：
+
+- 实质上是一个特殊的抽象类
+- 当抽线类的方法都是抽象的，那么该类可以通过接口的形式来进行表示
+- `class`可以定义类
+- `interface`用来定义接口
+
+接口的定义形式如下：
+
+- 成员变量有固定的修饰符：`public static final`
+- 成员函数有固定的修饰符：`public abstract`
+
+```java
+//显示声明
+interface Inter {
+    public static final int NUM = 4;
+    public abstract void show();
+}
+//隐式声明
+interface Inter1{
+    int NUM = 4;
+    void show();
+}
+/*
+上述两种类的声明形式是一致的
+*/
+```
+
+接口之间的关系：
+
+- 接口和类之间的关系称之为多实现
+- 接口和接口之间可以实现多继承
+
+接口不能进行实例化，因为抽象方法的存在
+
+接口需要子类进行实现，只有子类全部实现了接口的抽象方法，子类才可以被实例化；
+
+**否则子类就是一个抽象类**
+
+```java
+class Test implement Inter{
+    public void show(){
+        sysout("Hello");
+    }
+}
+class Demo{
+    public static void main(){
+        Test t = new Test();
+        sysout(t.NUM);     //通过实例对象来调用属性
+        sysout(Test.NUM);  //通过class名来调用属性
+        sysout(Inter.NUM); //通过父类调用属性
+    }
+}
+```
+
+### 类可以有多实现
+
+```java
+//显示声明
+interface Inter {
+    public static final int NUM = 4;
+    public abstract void show();
+}
+//显示声明
+interface InterA {
+    public static final int NUM = 4;
+    public abstract void showA();
+}
+
+class Test implement Inter,InterA {
+    public void show(){
+        sysout("Inter...");
+    }
+    public void showA(){
+        sysout("InterA...");
+    }
+}
+```
+
+### 接口和接口之间可以多继承
+
+```java
+interface A{
+    void methodA();
+}
+interface B extends A{
+    void methodB();
+}
+interface C extends B,A{
+    void methodC();
+}
+class D implement C {
+    public void methodA(){};
+    public void methodB(){};
+    public void methodC(){};
+}
+```
+
+### 接口的特点
+
+1. 接口是对外功能的拓展
+2. 接口是程序的功能拓展
+3. 接口可以用来多实现
+4. 类和接口之间是实现关系；类在继承一个类的过程中可以实现多接口
+5. 接口和接口之间可以有继承关系
+
+```java
+abstract class Student{
+    abstract void study();
+    void sleep(){
+        sysout("sleep...");
+    }
+}
+interface Smoke{
+    void smoke();
+}
+class zhangsan extends Student implement{
+    void study(){
+        
+    }
+    public voud smoke(){
+        
+    }
+}
+class Lisi extends Students {
+    void study(){
+        
+    }
+}
+```
+
