如何做笔记的思考

--- a/Java_04_三大特性/note/04_三大特性.md
+++ b/Java_04_三大特性/note/04_三大特性.md
@@ -486,3 +486,20 @@ class Lisi extends Students {
 }
 ```
 
+## 多态
+
+一种事物存在多种状态：
+
+如：动物包括：猫 狗 猪等
+
+```java
+//第一种定义方法
+Cat cat = new Cat();
+/*
+	第二种定义方法:
+	Animal类是猫和狗等具体事物抽象出来的父类型
+	父类型引用指向子类对象（范围大向范围小转型）
+*/
+Cat cat = new Animal();
+```
+
