--- a/Java_02_基础知识/note/01_基础知识.md
+++ b/Java_02_基础知识/note/01_基础知识.md
@@ -112,7 +112,11 @@ public class xxx {
 
 ### 常量
 
-**常量不可改变：**
+**常量不可改变：** 
+
+```java
+final double PI = 3.14;
+```
 
 1. 整数常量
 2. 小数常量
@@ -162,9 +166,13 @@ float f = 1.3f;
 
 - 自动类型转换(隐式类型提升:低级到高级)
   1. `byte` `short` `char` 的值将被提升为int型。
+
   2. 计算结果向大范围的数据类型提升
      - 如果一个操作数为`long`,计算结果为`long`
+
   3. 总结：`（byte short char）-> int -> long -> float -> double`
+
+     ![](../media/12_自动类型转换.png)
 
 1. 强制类型转化（显示类型提升：高级到低级）
 2. 类型转换原理
@@ -293,12 +301,88 @@ b^a^a = b;
 (Condition)？value1：Value2
 ```
 
+### 字符串
+
+从概念上来讲：Java字符串就是`Unicode`字符序列
+
+```java
+String str = "Hello";
+/*子串*/
+str1 = str.substring(0,3);  //Hel 从下表0开始，到下标2结束，共三个字符
+/*拼接*/
+String str2 = " World";
+String str3 = str + str2; //Hello World
+```
+
+**字符串是不可变的；但是字符串变量可以变化！！** 你品，你仔细品
+
+- `eg`:字符串`Hello`始终是`Hello `这5个字符
+- 但是字符串变量`str`可以任意修改
+
+在这里，可以想象把各种字符串放在公共的存储池中。也就是共享！！
+
+Java的设计者认为共享带来的高效率远远胜于提取、拼接字符串所带来的的低效率
+
+#### 检查字符串是否相等
+
+区分`equals`和`==`
+
+- `equals`用来检测两个字符串是否相等
+- `==`确定两个字符串是否放在同一个位置
+
+```java
+public class Example1{
+    public static void main(String[] args)
+    {
+        String str1 = "Hello World!!";
+        String str2 = "Hello World!!";
+        System.out.println(str1.equals(str2));
+        String str3 = str1;
+        System.out.println(str3 == str1);
+    }
+}
+```
+
+#### 空串和null
+
+空串是指长度为0的字符串
+
+```java
+/*判断字符串为空*/
+if(str.length() == 0)
+if(str.equals(""))
+```
+
+字符串为`null`
+
+```java
+if(str == null)
+```
+
+#### 构建字符串
+
+需要较短的字符串来构造字符串
+
+```java
+StringBuilder builder = new StringBuilder();
+builder.append("ch");
+/*在需要构建字符串的时候就调用toString()方法，就可以得到一个String对象*/
+String complete = builder.toString();
+```
+
+
+
 ### 程序流程控制
 
 #### 判断
 
 ```java
-if ... else if ... else ...
+if(condition)
+    statement;
+else if(condition) 
+	statement;
+else 
+    statement;
 ```
 
 #### 选择
@@ -310,7 +394,13 @@ switch(){
 }
 ```
 
-- 选择类型：`byte short int char `
+- `case`标签：
+
+```java
+char byte short int 枚举 字符串字面量
+```
+
+
 
 #### 循环
 
@@ -429,5 +519,7 @@ arr2[2] = new int[4];
 int[][] arr3 = {{1,2,3},{1,2},{1,}};
 /*获取数组长度*/
 int length = arr3[2].length;
+//获取数组长度
+int length1 = arr3.length;
 ```
 
