--- a/Java_03_对象和类/note/03_对象和类.md
+++ b/Java_03_对象和类/note/03_对象和类.md
@@ -649,6 +649,47 @@ class Demo {
 3. 如果构造器第一行运行了第二个构造器，则执行第二个构造器主题
 4. 执行构造器主体
 
+## 包
+
+Java允许使用包`package`将类代码组织起来。借助包可以方便的组织自己的代码，并且将自己的代码与别人提供的代码库分开管理
+
+使用包的主要原因是：**确保类名的唯一性**
+
+### 类的导入
+
+```java
+import Java.util.*;
+import Java.util.Date;
+```
+
+如果使用不同包的两个相同的类名，则需要在类名前面添加完整的包名
+
+```java
+java.util.Date deadline = new java.util.Date();
+java.sql.Date today = new java.sql.Date();
+```
+
+### 静态导入
+
+```java
+import static java.lang.System.*;
+/**就可以是哦也也能够System类中的静态方法和静态域，而不必添加类名前缀*/
+out.print("静态导入！！");
+
+/*还可以导入特定的方法或者域*/
+import static java.lang.System.out;
+print("Hello World!!");
+```
+
+## 类设计技巧
+
+1. 一定要保证数据私有化
+2. 一定要对数据进行初始化
+3. 不要在类中使用过多的基本类型
+4. 不是每一个域都需要独立的域访问器和域更改器
+5. 将职责过多的类进行分解
+6. 类名和方法要能够体现他们的职责
+
 ## 单例设计模式
 
 设计模式：主要是解决复杂问题，主要是思想层面的问题。
