--- a/Java_04_三大特性/note/04_三大特性.md
+++ b/Java_04_三大特性/note/04_三大特性.md
@@ -17,6 +17,8 @@
 
 ## 继承的出现
 
+出现`is-a`的关系，可以使用这种方法
+
 ```java
 class Student{
     String name;
@@ -40,6 +42,9 @@ class Worker{
 - 两个类具有相同的属性，方法不同
 
 我们将这两个类中共同的部分进行抽象，将共同部分的属性和方法提取出来，单独进行描述。
+
+- 已存在的类叫做超类 基类 父类
+- 新类称作子类 派生类 孩子类
 
 ```java
 class Person {
@@ -117,7 +122,14 @@ class Zi extends Fu {
 上述代码表明：当子类和父类含有相同的成员变量时：
 
 - 访问子类成员变量用`this`
+  - `this`关键字可以看做是对象的引用
+  - this可以引用隐式参数
+  - this可以调用该类的其他构造器
 - 访问父类成员变量使用`super`
+  - `super`关键字不是对象的引用，不能将`super`赋值给另一个对象变量
+  - 只是一个只是编译器调用父类方法的关键字
+  - super可以调用超类的方法
+  - super可以调用超类的构造器
 
 #### 函数
 
@@ -245,7 +257,20 @@ class Student extends Person{
   - `public static final PI = 3.14;`
 - 继承打破了封装性
 
+```java
+//此类不允许拓展
+final class Manager extends Employee{
+    
+}
+//子类不能覆盖这个方法
+public final String getName(){}
+```
+
+
+
 ## 抽象类
+
+**如果自下而上在类的继承层次结构中上移，位于上层的类更加具有通用性，甚至更加抽象！从某种角度来看，祖先了更加通用，人们只想将它作为派生其他类的基类，而不想把他作为可以使用的特定的实例类**
 
 上述说到，类是多个个体进行抽象所得出来的。当多个类出现相同功能时，但是功能主体却不同。
 
@@ -324,6 +349,12 @@ class Manager extends employee{
     
 }
 ```
+
+- 访问修饰符：
+  - 仅对本类可见：`private`
+  - 对所有类可见 --- `pubic`
+  - 仅对本包和所有子类可见--`protected`
+  - 对本包可见 --- `default`
 
 ## 模板方法模式
 
@@ -502,4 +533,148 @@ Cat cat = new Cat();
 */
 Cat cat = new Animal();
 ```
+
+### 多态的前提
+
+继承或者实现
+
+存再方法的覆盖
+
+- 向上转型：父类的通用方法 
+- 向下转型：子类的特有方法 
+- `instanceof`判断引用类型
+
+```java
+abstract class Animal {
+    abstract void eat();
+}
+class Cat extends Animal {
+    public void eat(){
+        System.out.println("eat fish ...");
+    }
+    public void catchMouse(){
+        System.out.println("catch Mouse...");
+    }
+}
+class Dog extends Animal {
+    public void eat(){
+        System.out.println("eat bones...");
+    }
+    public void kanJia(){
+        System.out.println("Kan jia ...");
+    }
+}
+
+
+public class DuoTaiDemo{
+
+    public static void main(String[] args)
+    {
+        Cat cat = new Cat();
+        function(cat);
+        Dog dog = new Dog();
+        function(dog);
+
+        Animal cat1 = new Cat();
+        //虽然父类是抽象类，但是自动调用子类的方法
+        //提高了代码额拓展性
+        function(cat1);
+        Animal dog1 = new Dog();
+        function(dog1);
+
+
+    }
+
+    public static void function(Cat c){
+        c.eat();
+        c.catchMouse();
+    }
+    public static void function(Dog d){
+        d.eat();
+        d.kanJia();
+    }
+    public static void function(Animal a){
+        a.eat();
+
+        if (a instanceof Cat){
+            //向下转型
+            Cat cat = (Cat)a;
+            cat.catchMouse();
+        }
+        else if(a instanceof Dog){
+            //向下转型
+            Dog dog = (Dog)a;
+            dog.kanJia();
+        }
+    }
+}
+
+```
+
+多态的好处：
+
+- 提高了代码的拓展性，使用继承和实现方式
+
+多态的弊端：
+
+- 但是只能父类的引用引用父类的方法
+
+### 多态中成员函数的特点（不理解！！）
+
+- 在多态中非静态成员函数的特点：
+    - 在编译时期：
+        - 参阅**引用型变量所属的类**中是否有调用方法 ：如果有编译通过，如果没有编译失败
+        - 在运行时期：参阅**对象所属的类**中是否有调用的方法
+    - 成员函数在多态调用时，编译看左边，运行看右边
+
+- 在多态中成员变量的特点：
+    - 无论编译和运行时期，参考左边
+- 在多态中静态成员函数的特点：
+    - 无论编译和运行时期，参考左边
+
+```java
+class Fu {
+    void m1(){
+        System.out.println("fu m1");
+    }
+    void m2(){
+        System.out.println("fu m2");
+    }
+    
+}
+class Zi extends Fu{
+    void m1(){
+        System.out.println("zi m1");
+    }
+    void m3(){
+        System.out.println("zi m3");
+    }
+    
+}
+public class DuoTaiDemo2{
+
+    public static void main(String[] args)
+    {
+        Fu f = new Fu();
+        f.m1();
+        f.m2();
+
+        //向上转型
+        Fu fz = new Zi();
+        fz.m1();
+        fz.m2();
+        //编译期间看左边
+        //fz.m3();
+
+        //未报错，确定了编译期间看左边
+        //运行期间看右边
+        Zi zf = (Zi)f;
+        zf.m1();
+        zf.m2();
+        zf.m3();
+    }
+}
+```
+
+## Object类
 
