--- a/Java_04_三大特性/note/04_三大特性.md
+++ b/Java_04_三大特性/note/04_三大特性.md
@@ -386,9 +386,15 @@ Class SubTime extends GetTime{
 
 ## 接口
 
+描述类具有什么功能，而并不给出每一个功能的具体实现!
+
+接口不是类，而是对类的一组需求描述，这些类要遵从接口描述的统一格式进行定义。
+
+接口中不能含有实例域，也不能在接口中实现方法。
+
 理解：
 
-- 实质上是一个特殊的抽象类
+- 实质上是一个特殊的抽象类（不包含类变量或者静态方法，却可以包括常量）
 - 当抽线类的方法都是抽象的，那么该类可以通过接口的形式来进行表示
 - `class`可以定义类
 - `interface`用来定义接口
@@ -516,6 +522,61 @@ class Lisi extends Students {
     }
 }
 ```
+
+`eg:`
+
+```java
+import java.util.*;
+abstract class Person {
+    String name;
+    int age;
+    public abstract void show();
+}
+
+class Student extends Person implements Comparable<Student>{
+    Student(String name, int age){
+        this.name = name;
+        this.age = age;
+    }
+    public void show(){
+        System.out.println("studnet: " + name + "age: " + age);
+    }
+    /**
+     * 排序一定要实现Comparable接口中的compareTo方法
+     * 
+     */
+    @Override
+    public int compareTo(Student s){
+        return Integer.compare(age, s.age);
+    }
+}
+
+public class ExInterface1{
+
+    public static void main(String[] args)
+    {
+        Student s1 = new Student("Bob",20);
+        Student s2 = new Student("Alice",21);
+        Student[] s3 = new Student[2];
+        s3[0] = s1;
+        s3[1] = s2;
+        Arrays.sort(s3);
+        for (Student student : s3) {
+            student.show();
+        }
+    }
+}
+```
+
+## 深拷贝和浅拷贝
+
+当拷贝一个变量时，原始变量与拷贝变量引用同一个对象。
+
+`clone`方法在`Object`类中是一个`protected`方法，也就是说，在用户编写代码的时候，不能直接调用。
+
+默认的拷贝方式为浅拷贝，并没有克隆包含在对象中的内部对象。
+
+应该实现`Cloneable`接口，然后将`clone`定义为`public`,并且调用`super.clone()`
 
 ## 多态
 
